--- a/tech-news-frontend/public/knowledge_base.json
+++ b/tech-news-frontend/public/knowledge_base.json
@@ -30230,5 +30230,37 @@
         "published": "Fri, 26 Dec 2025 19:23:28 +0000",
         "source": "Hacker News",
         "summary": "<a href=\"https://news.ycombinator.com/item?id=46395273\">Comments</a>"
+    },
+    {
+        "id": "https://techcrunch.com/2025/12/26/how-reality-crushed-ynsect-the-french-startup-that-had-raised-over-600m-for-insect-farming/",
+        "title": "How reality crushed \u0178nsect, the French startup that had raised over $600M for insect farming",
+        "link": "https://techcrunch.com/2025/12/26/how-reality-crushed-ynsect-the-french-startup-that-had-raised-over-600m-for-insect-farming/",
+        "published": "Fri, 26 Dec 2025 22:52:08 +0000",
+        "source": "TechCrunch",
+        "summary": "French insect farming company \u0178nsect was recently placed into judicial liquidation for insolvency, despite raising over $600 million."
+    },
+    {
+        "id": "https://www.theverge.com/news/850461/offshore-wind-trump-lawsuit-dominion-energy-ai-data-center",
+        "title": "Trump\u2019s war on offshore wind faces another lawsuit",
+        "link": "https://www.theverge.com/news/850461/offshore-wind-trump-lawsuit-dominion-energy-ai-data-center",
+        "published": "2025-12-26T17:14:47-05:00",
+        "source": "The Verge",
+        "summary": "Dominion Energy, an offshore wind developer and utility serving Virginia's \"data center alley,\" filed suit against the Trump administration this week over its decision to pause federal leases for large offshore wind projects. The move puts a sudden stop to five wind farms already under construction, including Dominion's Coastal Virginia Offshore Wind project. The complaint [&#8230;]"
+    },
+    {
+        "id": "https://blog.fogus.me/2025/12/23/the-best-things-and-stuff-of-2025.html",
+        "title": "The Best Things and Stuff of 2025",
+        "link": "https://blog.fogus.me/2025/12/23/the-best-things-and-stuff-of-2025.html",
+        "published": "Tue, 23 Dec 2025 14:51:33 +0000",
+        "source": "Hacker News",
+        "summary": "<a href=\"https://news.ycombinator.com/item?id=46365726\">Comments</a>"
+    },
+    {
+        "id": "https://zw.swerdlow.dev",
+        "title": "Drawing with zero-width characters",
+        "link": "https://zw.swerdlow.dev",
+        "published": "Fri, 26 Dec 2025 18:59:39 +0000",
+        "source": "Hacker News",
+        "summary": "<a href=\"https://news.ycombinator.com/item?id=46395061\">Comments</a>"
     }
 ]
