📚 Auto-update: News data refreshed - 2025-12-27 00:50 UTC

--- a/knowledge_base.json
+++ b/knowledge_base.json
@@ -30262,5 +30262,29 @@
         "published": "Fri, 26 Dec 2025 18:59:39 +0000",
         "source": "Hacker News",
         "summary": "<a href=\"https://news.ycombinator.com/item?id=46395061\">Comments</a>"
+    },
+    {
+        "id": "https://exe.dev/",
+        "title": "Exe.dev/",
+        "link": "https://exe.dev/",
+        "published": "Fri, 26 Dec 2025 23:42:46 +0000",
+        "source": "Hacker News",
+        "summary": "<a href=\"https://news.ycombinator.com/item?id=46397609\">Comments</a>"
+    },
+    {
+        "id": "https://graydon2.dreamwidth.org/193447.html",
+        "title": "Always Bet on Text",
+        "link": "https://graydon2.dreamwidth.org/193447.html",
+        "published": "Fri, 26 Dec 2025 23:09:40 +0000",
+        "source": "Hacker News",
+        "summary": "<a href=\"https://news.ycombinator.com/item?id=46397379\">Comments</a>"
+    },
+    {
+        "id": "https://economictimes.indiatimes.com/tech/technology/up-may-become-home-to-teemas-technology-park/articleshow/126193982.cms",
+        "title": "UP may become home to Teema\u2019s technology park",
+        "link": "https://economictimes.indiatimes.com/tech/technology/up-may-become-home-to-teemas-technology-park/articleshow/126193982.cms",
+        "published": "Sat, 27 Dec 2025 06:00:00 +0530",
+        "source": "Tech-Economic Times",
+        "summary": "Taiwanese contract manufacturing giant Foxconn's chairman Young Liu is current chairman of Teema and is spearheading the initiative that aims to establish such hubs in the US, India, Mexico and Poland in the first phase. The association is said to be in talks with several other Indian states as well."
     }
 ]
