📚 Auto-update: News data refreshed - 2025-12-27 02:45 UTC

--- a/knowledge_base.json
+++ b/knowledge_base.json
@@ -30286,5 +30286,37 @@
         "published": "Sat, 27 Dec 2025 06:00:00 +0530",
         "source": "Tech-Economic Times",
         "summary": "Taiwanese contract manufacturing giant Foxconn's chairman Young Liu is current chairman of Teema and is spearheading the initiative that aims to establish such hubs in the US, India, Mexico and Poland in the first phase. The association is said to be in talks with several other Indian states as well."
+    },
+    {
+        "id": "https://type-ruby.github.io/",
+        "title": "T-Ruby is Ruby with syntax for types",
+        "link": "https://type-ruby.github.io/",
+        "published": "Fri, 26 Dec 2025 20:27:50 +0000",
+        "source": "Hacker News",
+        "summary": "<a href=\"https://news.ycombinator.com/item?id=46395871\">Comments</a>"
+    },
+    {
+        "id": "https://www.zdnet.com/article/bad-wifi-10-fixes-for-better-internet/",
+        "title": "Bad Wi-Fi at home? Try my 10 go-to ways to fix your internet this weekend",
+        "link": "https://www.zdnet.com/article/bad-wifi-10-fixes-for-better-internet/",
+        "published": "Sat, 27 Dec 2025 02:00:44 GMT",
+        "source": "Latest news",
+        "summary": "I spent a weekend tweaking my home network to improve my Wi-Fi speed and connectivity. Here's what worked."
+    },
+    {
+        "id": "https://yourstory.com/2025/12/data-to-decisions-building-a-tech-stack-for-bharat-indian-bureaucracy",
+        "title": "Data to decisions: Building a tech stack for Bharat's bureaucracy",
+        "link": "https://yourstory.com/2025/12/data-to-decisions-building-a-tech-stack-for-bharat-indian-bureaucracy",
+        "published": "Sat, 27 Dec 2025 02:30:00 GMT",
+        "source": "YourStory RSS Feed",
+        "summary": "If the last decade was about Digital India, the next must be about Decisive India. Data can illuminate, but only decisions can transform. The future of governance will belong to nations that can turn data into trust, and trust into action."
+    },
+    {
+        "id": "https://inc42.com/buzz/new-ipos-push-new-age-tech-stocks-total-market-cap-past-140-bn/",
+        "title": "New IPOs Push New Age Tech Stocks\u2019 Total Market Cap Past $140 Bn",
+        "link": "https://inc42.com/buzz/new-ipos-push-new-age-tech-stocks-total-market-cap-past-140-bn/",
+        "published": "Sat, 27 Dec 2025 01:30:34 +0000",
+        "source": "Inc42 Media",
+        "summary": "<img alt=\"New IPOs Push New Age Tech Stocks\u2019 Total Market Cap Past $140 Bn\" class=\"webfeedsFeaturedVisual wp-post-image\" height=\"1021\" src=\"https://inc42.com/cdn-cgi/image/quality=75/https://asset.inc42.com/2025/12/New-Age-Tech-Stocks-YIR_FTR.jpg\" style=\"display: block; margin: auto; margin-bottom: 5px;\" width=\"1361\" />Multibagger listings of unicorn startups, along with the inclusion of already listed new-age tech companies in key indices, shaped India\u2019s&#8230;"
     }
 ]
