📚 Auto-update: News data refreshed - 2025-12-27 03:50 UTC

--- a/knowledge_base.json
+++ b/knowledge_base.json
@@ -30318,5 +30318,29 @@
         "published": "Sat, 27 Dec 2025 01:30:34 +0000",
         "source": "Inc42 Media",
         "summary": "<img alt=\"New IPOs Push New Age Tech Stocks\u2019 Total Market Cap Past $140 Bn\" class=\"webfeedsFeaturedVisual wp-post-image\" height=\"1021\" src=\"https://inc42.com/cdn-cgi/image/quality=75/https://asset.inc42.com/2025/12/New-Age-Tech-Stocks-YIR_FTR.jpg\" style=\"display: block; margin: auto; margin-bottom: 5px;\" width=\"1361\" />Multibagger listings of unicorn startups, along with the inclusion of already listed new-age tech companies in key indices, shaped India\u2019s&#8230;"
+    },
+    {
+        "id": "https://devblog.qnx.com/qnx-self-hosted-developer-desktop-initial-release/",
+        "title": "QNX Self-Hosted Developer Desktop",
+        "link": "https://devblog.qnx.com/qnx-self-hosted-developer-desktop-initial-release/",
+        "published": "Sat, 27 Dec 2025 01:16:53 +0000",
+        "source": "Hacker News",
+        "summary": "<a href=\"https://news.ycombinator.com/item?id=46398201\">Comments</a>"
+    },
+    {
+        "id": "https://economictimes.indiatimes.com/tech/technology/data-centre-surge-reaches-india-as-american-tech-giants-invest-billions/articleshow/126198794.cms",
+        "title": "Data centre surge reaches India as American tech giants invest billions",
+        "link": "https://economictimes.indiatimes.com/tech/technology/data-centre-surge-reaches-india-as-american-tech-giants-invest-billions/articleshow/126198794.cms",
+        "published": "Sat, 27 Dec 2025 08:06:49 +0530",
+        "source": "Tech-Economic Times",
+        "summary": "US tech giants are pouring tens of billions into Indian data centres as artificial intelligence use explodes. Microsoft, Amazon, Google and Meta see huge growth in a fast expanding population despite power, water and trade worries. India wants local servers for security and speed, and cities like Hyderabad are competing hard to host them."
+    },
+    {
+        "id": "https://inc42.com/buzz/from-coreel-technologies-to-powerup-money-indian-startups-raised-49-mn-this-week/",
+        "title": "From CoreEL Technologies To PowerUp Money \u2014 Indian Startups Raised $49 Mn This Week",
+        "link": "https://inc42.com/buzz/from-coreel-technologies-to-powerup-money-indian-startups-raised-49-mn-this-week/",
+        "published": "Sat, 27 Dec 2025 03:30:52 +0000",
+        "source": "Inc42 Media",
+        "summary": "<img alt=\"From CoreEL Technologies To PowerUp Money \u2014 Indian Startups Raised $49 Mn This Week\" class=\"webfeedsFeaturedVisual wp-post-image\" height=\"1020\" src=\"https://inc42.com/cdn-cgi/image/quality=75/https://asset.inc42.com/2025/12/Ftr-100-1-7.jpg\" style=\"display: block; margin: auto; margin-bottom: 5px;\" width=\"1360\" />Amid the year-end and festivities, the funding activity saw massive decline this week. Between December 22-26, Indian startups cumulatively managed&#8230;"
     }
 ]
