📚 Auto-update: News data refreshed - 2025-12-27 04:23 UTC

--- a/knowledge_base.json
+++ b/knowledge_base.json
@@ -30342,5 +30342,13 @@
         "published": "Sat, 27 Dec 2025 03:30:52 +0000",
         "source": "Inc42 Media",
         "summary": "<img alt=\"From CoreEL Technologies To PowerUp Money \u2014 Indian Startups Raised $49 Mn This Week\" class=\"webfeedsFeaturedVisual wp-post-image\" height=\"1020\" src=\"https://inc42.com/cdn-cgi/image/quality=75/https://asset.inc42.com/2025/12/Ftr-100-1-7.jpg\" style=\"display: block; margin: auto; margin-bottom: 5px;\" width=\"1360\" />Amid the year-end and festivities, the funding activity saw massive decline this week. Between December 22-26, Indian startups cumulatively managed&#8230;"
+    },
+    {
+        "id": "https://yourstory.com/2025/12/why-2026-is-the-year-smes-need-to-rethink-working-capital",
+        "title": "Why 2026 is the year SMEs need to rethink working capital",
+        "link": "https://yourstory.com/2025/12/why-2026-is-the-year-smes-need-to-rethink-working-capital",
+        "published": "Sat, 27 Dec 2025 04:00:00 GMT",
+        "source": "YourStory RSS Feed",
+        "summary": "As India\u2019s small businesses enter the final quarter of the financial year, liquidity planning and access to timely working capital are critical for stability and growth.\n\nAs 2026 approaches, small and medium-sized enterprises (SMEs) across India are gearing up for the final quarter of the financi"
     }
 ]
