--- a/tech-news-frontend/public/knowledge_base.json
+++ b/tech-news-frontend/public/knowledge_base.json
@@ -30350,5 +30350,13 @@
         "published": "Sat, 27 Dec 2025 04:00:00 GMT",
         "source": "YourStory RSS Feed",
         "summary": "As India\u2019s small businesses enter the final quarter of the financial year, liquidity planning and access to timely working capital are critical for stability and growth.\n\nAs 2026 approaches, small and medium-sized enterprises (SMEs) across India are gearing up for the final quarter of the financi"
+    },
+    {
+        "id": "https://economictimes.indiatimes.com/tech/artificial-intelligence/as-ai-companies-borrow-billions-debt-investors-grow-wary/articleshow/126199471.cms",
+        "title": "As AI companies borrow billions, debt investors grow wary",
+        "link": "https://economictimes.indiatimes.com/tech/artificial-intelligence/as-ai-companies-borrow-billions-debt-investors-grow-wary/articleshow/126199471.cms",
+        "published": "Sat, 27 Dec 2025 09:47:28 +0530",
+        "source": "Tech-Economic Times",
+        "summary": "Stock markets remain upbeat about artificial intelligence, but debt investors are far more cautious. New and smaller AI firms are being charged high interest rates on the money they borrow, indicating investors' scepticism when new, unproven AI businesses take on large debts. While big firms like Amazon borrow cheaply, riskier AI companies face rising yields and falling bond prices."
     }
 ]
