📚 Auto-update: News data refreshed - 2025-12-27 06:16 UTC

--- a/knowledge_base.json
+++ b/knowledge_base.json
@@ -30358,5 +30358,29 @@
         "published": "Sat, 27 Dec 2025 09:47:28 +0530",
         "source": "Tech-Economic Times",
         "summary": "Stock markets remain upbeat about artificial intelligence, but debt investors are far more cautious. New and smaller AI firms are being charged high interest rates on the money they borrow, indicating investors' scepticism when new, unproven AI businesses take on large debts. While big firms like Amazon borrow cheaply, riskier AI companies face rising yields and falling bond prices."
+    },
+    {
+        "id": "https://www.wired.com/story/hellofresh-coupon/",
+        "title": "HelloFresh Coupon Codes: 55% Off + Free Meals",
+        "link": "https://www.wired.com/story/hellofresh-coupon/",
+        "published": "Sat, 27 Dec 2025 06:00:00 +0000",
+        "source": "WIRED",
+        "summary": "Get up to 55% off and free meal boxes using a HelloFresh coupon code today. Discover our best codes and discounts to let you save time and money."
+    },
+    {
+        "id": "https://www.eff.org/deeplinks/2025/12/ai-police-reports-year-review",
+        "title": "AI Police Reports: Year in Review",
+        "link": "https://www.eff.org/deeplinks/2025/12/ai-police-reports-year-review",
+        "published": "Tue, 23 Dec 2025 17:30:15 +0000",
+        "source": "Hacker News",
+        "summary": "<a href=\"https://news.ycombinator.com/item?id=46367195\">Comments</a>"
+    },
+    {
+        "id": "https://yourstory.com/2025/12/wow-momo-raises-rs-75-crore-from-madhusudan-kela",
+        "title": "Wow! Momo raises Rs 75 Cr from Madhusudan Kela",
+        "link": "https://yourstory.com/2025/12/wow-momo-raises-rs-75-crore-from-madhusudan-kela",
+        "published": "Sat, 27 Dec 2025 05:51:24 GMT",
+        "source": "YourStory RSS Feed",
+        "summary": "The funding raised by Wow! Momo is part of its ongoing bridge round, and the capital will be used for growth-related activities."
     }
 ]
