--- a/tech-news-frontend/public/knowledge_base.json
+++ b/tech-news-frontend/public/knowledge_base.json
@@ -30382,5 +30382,13 @@
         "published": "Sat, 27 Dec 2025 05:51:24 GMT",
         "source": "YourStory RSS Feed",
         "summary": "The funding raised by Wow! Momo is part of its ongoing bridge round, and the capital will be used for growth-related activities."
+    },
+    {
+        "id": "https://inc42.com/buzz/wow-momo-raises-inr-75-cr-from-madhusudan-kela/",
+        "title": "Wow! Momo Raises INR 75 Cr From Madhusudan Kela",
+        "link": "https://inc42.com/buzz/wow-momo-raises-inr-75-cr-from-madhusudan-kela/",
+        "published": "Sat, 27 Dec 2025 07:03:32 +0000",
+        "source": "Inc42 Media",
+        "summary": "<img alt=\"wow momo funding\" class=\"webfeedsFeaturedVisual wp-post-image\" height=\"1020\" src=\"https://inc42.com/cdn-cgi/image/quality=75/https://asset.inc42.com/2025/12/wow-momo-ft.png\" style=\"display: block; margin: auto; margin-bottom: 5px;\" width=\"1360\" />Quick service restaurant (QSR) chain Wow! Momo has bagged INR 75 Cr (about $8.4 Mn) as part of its ongoing&#8230;"
     }
 ]
