--- a/tech-news-frontend/public/knowledge_base.json
+++ b/tech-news-frontend/public/knowledge_base.json
@@ -30390,5 +30390,29 @@
         "published": "Sat, 27 Dec 2025 07:03:32 +0000",
         "source": "Inc42 Media",
         "summary": "<img alt=\"wow momo funding\" class=\"webfeedsFeaturedVisual wp-post-image\" height=\"1020\" src=\"https://inc42.com/cdn-cgi/image/quality=75/https://asset.inc42.com/2025/12/wow-momo-ft.png\" style=\"display: block; margin: auto; margin-bottom: 5px;\" width=\"1360\" />Quick service restaurant (QSR) chain Wow! Momo has bagged INR 75 Cr (about $8.4 Mn) as part of its ongoing&#8230;"
+    },
+    {
+        "id": "https://github.com/Syn-Nine/gar-lang/blob/main/DEVLOG.md",
+        "title": "Langjam-Gamejam Devlog: Making a language, compiler, VM and 5 games in 52 hours",
+        "link": "https://github.com/Syn-Nine/gar-lang/blob/main/DEVLOG.md",
+        "published": "Sun, 21 Dec 2025 20:44:35 +0000",
+        "source": "Hacker News",
+        "summary": "<a href=\"https://news.ycombinator.com/item?id=46348251\">Comments</a>"
+    },
+    {
+        "id": "https://economictimes.indiatimes.com/tech/technology/zepto-ipo-quick-commerce-platform-makes-confidential-filing-with-sebi-sources-say/articleshow/126201754.cms",
+        "title": "Zepto IPO: Quick commerce platform makes confidential filing with Sebi, sources say",
+        "link": "https://economictimes.indiatimes.com/tech/technology/zepto-ipo-quick-commerce-platform-makes-confidential-filing-with-sebi-sources-say/articleshow/126201754.cms",
+        "published": "Sat, 27 Dec 2025 13:29:09 +0530",
+        "source": "Tech-Economic Times",
+        "summary": "Quick commerce firm Zepto has filed draft papers with Sebi for a $1.3 billion IPO, people in the know told us. The Aadit Palicha-led company plans to raise most funds through fresh shares, with some stake sales by early investors. The Bengaluru-based firm, valued at $7 billion, aims to list in July-September quarter of 2026."
+    },
+    {
+        "id": "https://yourstory.com/2025/12/cardekho-invests-10-million-in-collegedekho",
+        "title": "CarDekho invests $10M in CollegeDekho",
+        "link": "https://yourstory.com/2025/12/cardekho-invests-10-million-in-collegedekho",
+        "published": "Sat, 27 Dec 2025 06:14:49 GMT",
+        "source": "YourStory RSS Feed",
+        "summary": "The funding will be used by CollegeDekho to expand its presence in Tier II and beyond locations and growth-related activities."
     }
 ]
