📚 Auto-update: News data refreshed - 2025-12-27 09:11 UTC

--- a/knowledge_base.json
+++ b/knowledge_base.json
@@ -30414,5 +30414,37 @@
         "published": "Sat, 27 Dec 2025 06:14:49 GMT",
         "source": "YourStory RSS Feed",
         "summary": "The funding will be used by CollegeDekho to expand its presence in Tier II and beyond locations and growth-related activities."
+    },
+    {
+        "id": "http://npmjs.com/package/ezff",
+        "title": "Show HN: Ez FFmpeg \u2013 Video editing in plain English",
+        "link": "http://npmjs.com/package/ezff",
+        "published": "Sat, 27 Dec 2025 08:45:46 +0000",
+        "source": "Hacker News",
+        "summary": "<a href=\"https://news.ycombinator.com/item?id=46400251\">Comments</a>"
+    },
+    {
+        "id": "https://github.com/mruby/mruby",
+        "title": "Mruby: Ruby for Embedded Systems",
+        "link": "https://github.com/mruby/mruby",
+        "published": "Mon, 22 Dec 2025 05:00:14 +0000",
+        "source": "Hacker News",
+        "summary": "<a href=\"https://news.ycombinator.com/item?id=46351457\">Comments</a>"
+    },
+    {
+        "id": "https://economictimes.indiatimes.com/tech/artificial-intelligence/ai-layoffs-no-longer-cheer-markets-as-investors-turn-sceptical-says-study/articleshow/126202361.cms",
+        "title": "AI layoffs no longer cheer markets as investors turn sceptical, says study",
+        "link": "https://economictimes.indiatimes.com/tech/artificial-intelligence/ai-layoffs-no-longer-cheer-markets-as-investors-turn-sceptical-says-study/articleshow/126202361.cms",
+        "published": "Sat, 27 Dec 2025 14:20:21 +0530",
+        "source": "Tech-Economic Times",
+        "summary": "Earlier, layoff announcements often lifted share prices as investors anticipated cost savings and better margins. However, the study by Goldman Sachs has found that such announcements are now followed by an average 2% decline in share prices. That\u2019s because companies announcing layoffs this year have seen higher capex, rising debt and interest costs, and weaker profit growth than their peers."
+    },
+    {
+        "id": "https://inc42.com/buzz/zepto-files-confidential-draft-papers-for-over-1-3-bn-ipo/",
+        "title": "Zepto Files Confidential Draft Papers For Over $1.3 Bn IPO",
+        "link": "https://inc42.com/buzz/zepto-files-confidential-draft-papers-for-over-1-3-bn-ipo/",
+        "published": "Sat, 27 Dec 2025 08:42:37 +0000",
+        "source": "Inc42 Media",
+        "summary": "<img alt=\"Zepto IPO\" class=\"webfeedsFeaturedVisual wp-post-image\" height=\"1020\" src=\"https://inc42.com/cdn-cgi/image/quality=75/https://asset.inc42.com/2025/11/zepto-palicha-featured.jpg\" style=\"display: block; margin: auto; margin-bottom: 5px;\" width=\"1360\" />Quick commerce major Zepto has pre-filed the draft papers for an over $1.3 Bn (around INR 11,682 Cr) IPO with&#8230;"
     }
 ]
