--- a/tech-news-frontend/public/knowledge_base.json
+++ b/tech-news-frontend/public/knowledge_base.json
@@ -30446,5 +30446,21 @@
         "published": "Sat, 27 Dec 2025 08:42:37 +0000",
         "source": "Inc42 Media",
         "summary": "<img alt=\"Zepto IPO\" class=\"webfeedsFeaturedVisual wp-post-image\" height=\"1020\" src=\"https://inc42.com/cdn-cgi/image/quality=75/https://asset.inc42.com/2025/11/zepto-palicha-featured.jpg\" style=\"display: block; margin: auto; margin-bottom: 5px;\" width=\"1360\" />Quick commerce major Zepto has pre-filed the draft papers for an over $1.3 Bn (around INR 11,682 Cr) IPO with&#8230;"
+    },
+    {
+        "id": "https://www.wired.com/story/the-us-must-stop-underestimating-drone-warfare/",
+        "title": "The US Must Stop Underestimating Drone Warfare",
+        "link": "https://www.wired.com/story/the-us-must-stop-underestimating-drone-warfare/",
+        "published": "Sat, 27 Dec 2025 10:00:00 +0000",
+        "source": "WIRED",
+        "summary": "The future of conflict is cheap, rapidly manufactured, and tough to defend against."
+    },
+    {
+        "id": "https://economictimes.indiatimes.com/tech/artificial-intelligence/china-issues-drafts-rules-to-regulate-ai-with-human-like-interaction/articleshow/126202514.cms",
+        "title": "China issues drafts rules to regulate AI with human-like interaction",
+        "link": "https://economictimes.indiatimes.com/tech/artificial-intelligence/china-issues-drafts-rules-to-regulate-ai-with-human-like-interaction/articleshow/126202514.cms",
+        "published": "Sat, 27 Dec 2025 14:33:23 +0530",
+        "source": "Tech-Economic Times",
+        "summary": "China\u2019s cyber regulator has proposed new rules to tighten control over AI services that mimic human personalities and form emotional bonds with users. The draft would require firms to warn against overuse, manage addiction risks and protect data throughout a product\u2019s life. It also bans content that threatens security or promotes violence or obscenity."
     }
 ]
