--- a/tech-news-frontend/public/knowledge_base.json
+++ b/tech-news-frontend/public/knowledge_base.json
@@ -30462,5 +30462,29 @@
         "published": "Sat, 27 Dec 2025 14:33:23 +0530",
         "source": "Tech-Economic Times",
         "summary": "China\u2019s cyber regulator has proposed new rules to tighten control over AI services that mimic human personalities and form emotional bonds with users. The draft would require firms to warn against overuse, manage addiction risks and protect data throughout a product\u2019s life. It also bans content that threatens security or promotes violence or obscenity."
+    },
+    {
+        "id": "https://www.wired.com/story/expired-tired-wired-gpt-5/",
+        "title": "So Long, GPT-5. Hello, Qwen",
+        "link": "https://www.wired.com/story/expired-tired-wired-gpt-5/",
+        "published": "Sat, 27 Dec 2025 11:00:00 +0000",
+        "source": "WIRED",
+        "summary": "In the AI boom, chatbots and GPTs come and go quickly. (Remember Llama?) GPT-5 had a big year, but 2026 will be all about Qwen."
+    },
+    {
+        "id": "https://www.wired.com/story/expired-tired-wired-memecoins/",
+        "title": "In Cryptoland, Memecoin Fever Gives Way to a Stablecoin Boom",
+        "link": "https://www.wired.com/story/expired-tired-wired-memecoins/",
+        "published": "Sat, 27 Dec 2025 11:00:00 +0000",
+        "source": "WIRED",
+        "summary": "In a year that began with a memecoin trading frenzy, stablecoins have emerged as the respectable face of the crypto industry."
+    },
+    {
+        "id": "https://www.zdnet.com/article/roku-tv-hidden-menus-settings/",
+        "title": "Own a Roku TV? You're missing out on these hidden settings and menu screens",
+        "link": "https://www.zdnet.com/article/roku-tv-hidden-menus-settings/",
+        "published": "Sat, 27 Dec 2025 11:00:56 GMT",
+        "source": "Latest news",
+        "summary": "A simple button combination unlocks Roku's hidden menu, which offers advanced features."
     }
 ]
