--- a/tech-news-frontend/public/knowledge_base.json
+++ b/tech-news-frontend/public/knowledge_base.json
@@ -30486,5 +30486,45 @@
         "published": "Sat, 27 Dec 2025 11:00:56 GMT",
         "source": "Latest news",
         "summary": "A simple button combination unlocks Roku's hidden menu, which offers advanced features."
+    },
+    {
+        "id": "https://www.wired.com/story/chinas-clean-energy-investments-abroad-are-a-boon-for-climate-but-human-rights-and-the-environment-are-a-different-story/",
+        "title": "The Environmental and Human Rights Costs of China\u2019s Clean Energy Investments Abroad",
+        "link": "https://www.wired.com/story/chinas-clean-energy-investments-abroad-are-a-boon-for-climate-but-human-rights-and-the-environment-are-a-different-story/",
+        "published": "Sat, 27 Dec 2025 12:00:00 +0000",
+        "source": "WIRED",
+        "summary": "Chinese companies have pledged hundreds of billions of dollars in clean energy manufacturing investments overseas, but the projects are having significant social, environmental, and human rights impacts."
+    },
+    {
+        "id": "https://www.wired.com/review/tuft-and-needle-original-hybrid/",
+        "title": "Tuft & Needle Original Hybrid Mattress Review: A Soft Landing",
+        "link": "https://www.wired.com/review/tuft-and-needle-original-hybrid/",
+        "published": "Sat, 27 Dec 2025 11:32:00 +0000",
+        "source": "WIRED",
+        "summary": "Choosing a mattress for your guest room, Airbnb, or VRBO rental is challenging. This hybrid is up for it."
+    },
+    {
+        "id": "https://nesbitt.io/2025/12/25/cursed-bundler-using-go-get-to-install-ruby-gems.html",
+        "title": "Cursed Bundler: Using go get to install Ruby Gems",
+        "link": "https://nesbitt.io/2025/12/25/cursed-bundler-using-go-get-to-install-ruby-gems.html",
+        "published": "Sat, 27 Dec 2025 11:05:46 +0000",
+        "source": "Hacker News",
+        "summary": "<a href=\"https://news.ycombinator.com/item?id=46400927\">Comments</a>"
+    },
+    {
+        "id": "https://react-networks-lib.rackout.net/fibre",
+        "title": "Splice a Fibre",
+        "link": "https://react-networks-lib.rackout.net/fibre",
+        "published": "Sat, 27 Dec 2025 11:57:17 +0000",
+        "source": "Hacker News",
+        "summary": "<a href=\"https://news.ycombinator.com/item?id=46401190\">Comments</a>"
+    },
+    {
+        "id": "https://inc42.com/features/will-2026-be-the-year-of-startup-mas-trends/",
+        "title": "Will 2026 Be The Year Of Startup M&As?",
+        "link": "https://inc42.com/features/will-2026-be-the-year-of-startup-mas-trends/",
+        "published": "Sat, 27 Dec 2025 11:11:32 +0000",
+        "source": "Inc42 Media",
+        "summary": "<img alt=\"Will 2026 Be The Year Of Startup M&amp;As?\" class=\"webfeedsFeaturedVisual wp-post-image\" height=\"1026\" src=\"https://inc42.com/cdn-cgi/image/quality=75/https://asset.inc42.com/2025/12/FTR-100-3-3.jpg\" style=\"display: block; margin: auto; margin-bottom: 5px;\" width=\"1361\" />India\u2019s M&#38;A market may not make a resounding comeback in 2026, even as global M&#38;A activity turned more buoyant in&#8230;"
     }
 ]
