📚 Auto-update: News data refreshed - 2025-12-27 13:22 UTC

--- a/knowledge_base.json
+++ b/knowledge_base.json
@@ -30526,5 +30526,37 @@
         "published": "Sat, 27 Dec 2025 11:11:32 +0000",
         "source": "Inc42 Media",
         "summary": "<img alt=\"Will 2026 Be The Year Of Startup M&amp;As?\" class=\"webfeedsFeaturedVisual wp-post-image\" height=\"1026\" src=\"https://inc42.com/cdn-cgi/image/quality=75/https://asset.inc42.com/2025/12/FTR-100-3-3.jpg\" style=\"display: block; margin: auto; margin-bottom: 5px;\" width=\"1361\" />India\u2019s M&#38;A market may not make a resounding comeback in 2026, even as global M&#38;A activity turned more buoyant in&#8230;"
+    },
+    {
+        "id": "https://www.theverge.com/entertainment/842024/steam-deck-best-games-2025-verified-playable-valve",
+        "title": "8 great games for your Steam Deck from 2025",
+        "link": "https://www.theverge.com/entertainment/842024/steam-deck-best-games-2025-verified-playable-valve",
+        "published": "2025-12-27T08:00:00-05:00",
+        "source": "The Verge",
+        "summary": "I played a lot of games on my Steam Deck this year. It seemed like there was a never-ending list of incredible indie games to try - The Verge wrote about a lot of them! - and many worked brilliantly on Valve's handheld gaming PC. Some bigger games made a splash on Steam Deck, too, [&#8230;]"
+    },
+    {
+        "id": "https://www.wired.com/review/hyperkin-the-competitor-controller/",
+        "title": "Hyperkin The Competitor Controller Review: A DualSense Copycat",
+        "link": "https://www.wired.com/review/hyperkin-the-competitor-controller/",
+        "published": "Sat, 27 Dec 2025 12:30:00 +0000",
+        "source": "WIRED",
+        "summary": "This copycat controller can\u2019t clone the PS5\u2019s best features, but it\u2019s a solid option for Xbox and PC gamers."
+    },
+    {
+        "id": "https://www.economist.com/christmas-specials/2025/12/18/the-battle-to-stop-clever-people-betting",
+        "title": "The battle to stop clever people betting",
+        "link": "https://www.economist.com/christmas-specials/2025/12/18/the-battle-to-stop-clever-people-betting",
+        "published": "Sat, 27 Dec 2025 01:11:05 +0000",
+        "source": "Hacker News",
+        "summary": "<a href=\"https://news.ycombinator.com/item?id=46398170\">Comments</a>"
+    },
+    {
+        "id": "https://economictimes.indiatimes.com/tech/startups/top-10-coworking-operators-hold-2/3rd-of-flexible-workspace-stock-vestian/articleshow/126204323.cms",
+        "title": "Top 10 coworking operators hold 2/3rd of flexible workspace stock: Vestian",
+        "link": "https://economictimes.indiatimes.com/tech/startups/top-10-coworking-operators-hold-2/3rd-of-flexible-workspace-stock-vestian/articleshow/126204323.cms",
+        "published": "Sat, 27 Dec 2025 17:36:15 +0530",
+        "source": "Tech-Economic Times",
+        "summary": "WeWork India, Smartworks, Awfis and IndiQube Spaces are already listed on stock exchanges. Other major players are The Executive Centre, Incuspaze, Simpliwork Offices, Table Space, Urban Vault, 91Springboard, Spring House Workspaces, BHIVE Workspace, 315Work Avenue, The Office Pass and Hanto Workspaces."
     }
 ]
