📚 Auto-update: News data refreshed - 2025-12-27 14:10 UTC

--- a/knowledge_base.json
+++ b/knowledge_base.json
@@ -30558,5 +30558,29 @@
         "published": "Sat, 27 Dec 2025 17:36:15 +0530",
         "source": "Tech-Economic Times",
         "summary": "WeWork India, Smartworks, Awfis and IndiQube Spaces are already listed on stock exchanges. Other major players are The Executive Centre, Incuspaze, Simpliwork Offices, Table Space, Urban Vault, 91Springboard, Spring House Workspaces, BHIVE Workspace, 315Work Avenue, The Office Pass and Hanto Workspaces."
+    },
+    {
+        "id": "https://github.com/DeepMyst/Mysti",
+        "title": "Show HN: Mysti \u2013 Claude, Codex, and Gemini debate your code, then synthesize",
+        "link": "https://github.com/DeepMyst/Mysti",
+        "published": "Tue, 23 Dec 2025 13:18:32 +0000",
+        "source": "Hacker News",
+        "summary": "<a href=\"https://news.ycombinator.com/item?id=46365105\">Comments</a>"
+    },
+    {
+        "id": "https://www.zdnet.com/article/how-to-get-wired-network-without-ethernet/",
+        "title": "Bye bye, Wi-Fi: How to add a wired network to your home without running Ethernet",
+        "link": "https://www.zdnet.com/article/how-to-get-wired-network-without-ethernet/",
+        "published": "Sat, 27 Dec 2025 14:00:40 GMT",
+        "source": "Latest news",
+        "summary": "Turn your cable outlets into high-speed internet ports with this simple, low-cost adapter - no rewiring required."
+    },
+    {
+        "id": "https://inc42.com/buzz/meesho-aequs-slide-in-another-mixed-week-for-new-age-tech-stocks/",
+        "title": "Meesho, Aequs Slide In Another Mixed Week For New-Age Tech Stocks",
+        "link": "https://inc42.com/buzz/meesho-aequs-slide-in-another-mixed-week-for-new-age-tech-stocks/",
+        "published": "Sat, 27 Dec 2025 13:38:10 +0000",
+        "source": "Inc42 Media",
+        "summary": "<img alt=\"Meesho, Aequs Slide In Another Mixed Week For New-Age Tech Stocks\" class=\"webfeedsFeaturedVisual wp-post-image\" height=\"1021\" src=\"https://inc42.com/cdn-cgi/image/quality=75/https://asset.inc42.com/2025/12/Feature-100-1-1.jpg\" style=\"display: block; margin: auto; margin-bottom: 5px;\" width=\"1361\" />Amid a holiday-shortened week, new-age tech stocks saw another mixed week. During December 22-26, twenty three new-age tech companies gained&#8230;"
     }
 ]
