--- a/tech-news-frontend/public/knowledge_base.json
+++ b/tech-news-frontend/public/knowledge_base.json
@@ -30582,5 +30582,45 @@
         "published": "Sat, 27 Dec 2025 13:38:10 +0000",
         "source": "Inc42 Media",
         "summary": "<img alt=\"Meesho, Aequs Slide In Another Mixed Week For New-Age Tech Stocks\" class=\"webfeedsFeaturedVisual wp-post-image\" height=\"1021\" src=\"https://inc42.com/cdn-cgi/image/quality=75/https://asset.inc42.com/2025/12/Feature-100-1-1.jpg\" style=\"display: block; margin: auto; margin-bottom: 5px;\" width=\"1361\" />Amid a holiday-shortened week, new-age tech stocks saw another mixed week. During December 22-26, twenty three new-age tech companies gained&#8230;"
+    },
+    {
+        "id": "https://techcrunch.com/2025/12/27/the-7-top-space-and-defense-tech-startups-from-disrupt-startup-battlefield/",
+        "title": "The 7 top space and defense tech startups from Disrupt Startup Battlefield",
+        "link": "https://techcrunch.com/2025/12/27/the-7-top-space-and-defense-tech-startups-from-disrupt-startup-battlefield/",
+        "published": "Sat, 27 Dec 2025 15:00:00 +0000",
+        "source": "TechCrunch",
+        "summary": "Here is the full list of the space and defense tech Startup Battlefield 200 selectees, along with a note on what made us select them for the competition."
+    },
+    {
+        "id": "https://github.com/apple/ml-sharp",
+        "title": "Apple releases open-source model that instantly turns 2D photos into 3D views",
+        "link": "https://github.com/apple/ml-sharp",
+        "published": "Sat, 27 Dec 2025 12:58:12 +0000",
+        "source": "Hacker News",
+        "summary": "<a href=\"https://news.ycombinator.com/item?id=46401539\">Comments</a>"
+    },
+    {
+        "id": "https://economictimes.indiatimes.com/tech/technology/waymos-san-francisco-outage-raises-doubts-over-robotaxi-readiness-during-crises/articleshow/126205794.cms",
+        "title": "Waymo's San Francisco outage raises doubts over robotaxi readiness during crises",
+        "link": "https://economictimes.indiatimes.com/tech/technology/waymos-san-francisco-outage-raises-doubts-over-robotaxi-readiness-during-crises/articleshow/126205794.cms",
+        "published": "Sat, 27 Dec 2025 20:20:23 +0530",
+        "source": "Tech-Economic Times",
+        "summary": "Driverless taxis from Alphabet unit Waymo, a ubiquitous feature on the city's streets, were stuck \u2060at intersections with their hazard lights turned on as traffic lights stopped working following a fire at a PG&amp;E substation that knocked out power to roughly one-third of the city on December 20, videos posted on social media showed."
+    },
+    {
+        "id": "https://economictimes.indiatimes.com/tech/technology/never-felt-this-much-behind-andrej-karpathy-says-programming-being-refactored-by-ai/articleshow/126205679.cms",
+        "title": "'Never felt this much behind': Andrej Karpathy says programming being refactored by AI",
+        "link": "https://economictimes.indiatimes.com/tech/technology/never-felt-this-much-behind-andrej-karpathy-says-programming-being-refactored-by-ai/articleshow/126205679.cms",
+        "published": "Sat, 27 Dec 2025 20:02:25 +0530",
+        "source": "Tech-Economic Times",
+        "summary": "Karpathy said he has \u201cnever felt this much behind as a programmer,\u201d describing the change in how code is now written, optimised, and deployed. \u201cThe profession is being dramatically refactored,\u201d he wrote."
+    },
+    {
+        "id": "https://yourstory.com/2025/12/a-turning-point-for-indian-msmes-rewriting-the-rules-of-work-and-life",
+        "title": "A turning point for Indian MSMEs; Rewriting the rules of work and life",
+        "link": "https://yourstory.com/2025/12/a-turning-point-for-indian-msmes-rewriting-the-rules-of-work-and-life",
+        "published": "Sat, 27 Dec 2025 02:00:00 GMT",
+        "source": "YourStory RSS Feed",
+        "summary": "As a Christmas gift, Google unveiled a feature for Gmail users who are still stuck with their embarrassing email addresses from high school."
     }
 ]
