📚 Auto-update: News data refreshed - 2025-12-27 16:12 UTC

--- a/knowledge_base.json
+++ b/knowledge_base.json
@@ -30622,5 +30622,29 @@
         "published": "Sat, 27 Dec 2025 02:00:00 GMT",
         "source": "YourStory RSS Feed",
         "summary": "As a Christmas gift, Google unveiled a feature for Gmail users who are still stuck with their embarrassing email addresses from high school."
+    },
+    {
+        "id": "https://techcrunch.com/2025/12/27/the-22-top-clean-tech-and-energy-startups-from-disrupt-startup-battlefield/",
+        "title": "The 22 top clean tech and energy startups from Disrupt Startup Battlefield",
+        "link": "https://techcrunch.com/2025/12/27/the-22-top-clean-tech-and-energy-startups-from-disrupt-startup-battlefield/",
+        "published": "Sat, 27 Dec 2025 16:00:00 +0000",
+        "source": "TechCrunch",
+        "summary": "Here is the full list of the clean tech and energy Startup Battlefield 200 selectees, along with a note on what made us select them for the competition."
+    },
+    {
+        "id": "https://techcrunch.com/2025/12/27/ny-governor-hochul-signs-bill-requiring-warning-labels-on-addictive-social-media/",
+        "title": "NY Governor Hochul signs bill requiring warning labels on \u2018addictive\u2019 social media",
+        "link": "https://techcrunch.com/2025/12/27/ny-governor-hochul-signs-bill-requiring-warning-labels-on-addictive-social-media/",
+        "published": "Sat, 27 Dec 2025 15:51:08 +0000",
+        "source": "TechCrunch",
+        "summary": "New York Governor Kathy Hochul signed a bill requiring social media platforms to show warning labels to younger users before they\u2019re exposed to features such as autoplay and infinite scrolling."
+    },
+    {
+        "id": "https://www.theverge.com/gadgets/850390/google-pixel-10-anker-laptop-power-bank-nintendo-switch-game-sale-deal-sale",
+        "title": "Pixel 10 phones and Switch 2 games round out this week\u2019s best deals",
+        "link": "https://www.theverge.com/gadgets/850390/google-pixel-10-anker-laptop-power-bank-nintendo-switch-game-sale-deal-sale",
+        "published": "2025-12-27T11:07:03-05:00",
+        "source": "The Verge",
+        "summary": "If you\u2019re taking it easy during the slow, in-between week between Christmas and New Year\u2019s, now\u2019s a good time to catch up on deals you might\u2019ve missed. Many of our favorite discounts from the past week are still hanging around, making this an especially convenient moment to shop. Whether you\u2019re eyeing a new phone, gearing [&#8230;]"
     }
 ]
